--- a/Baitap/cinema/cinema.css
+++ b/Baitap/cinema/cinema.css
@@ -78,3 +78,16 @@ body {
     top: 120px;
     overflow: hidden;
 }
+
+.container .content #video1::after{
+    content: "";
+    position: absolute;
+    background-image: url(/images/imagesNetflix/avengers-iron-man-rcjqb2irt9hxfks0.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+}
